# 2R-GAMES

./: README.md
2RGAMES-BACK/: .env  README.md  rest_api.drawio  start.sh  template.yml
2RGAMES-BACK/database/: .env  Cargo.toml
2RGAMES-BACK/database/src/: lib.rs
2RGAMES-BACK/http-service/: Cargo.toml
2RGAMES-BACK/http-service/src/: lib.rs
2RGAMES-BACK/model-marcos/: Cargo.toml
2RGAMES-BACK/model-marcos/src/: lib.rs
2RGAMES-BACK/models/: Cargo.toml
2RGAMES-BACK/models/src/: assigned_exercise.rs  connection_to_db.rs  event.rs  exercise.rs  lib.rs  user.rs  user_activity.rs  utils.rs
2RGAMES-BACK/models/src/http_communication/: mod.rs  pagination.rs  user_http_communication.rs
2RGAMES-BACK/models/src/repositories/: user_repository.rs
2RGAMES-BACK/models/src/services/: user_service.rs
2RGAMES-BACK/sam-user-get/: Cargo.toml
2RGAMES-BACK/sam-user-get/src/: main.rs
2RGAMES-BACK/sam-user-post/: Cargo.toml
2RGAMES-BACK/sam-user-post/src/: main.rs
2RGAMES-BACK/sam-user_get_exercises/: Cargo.toml
2RGAMES-BACK/sam-user_get_exercises/src/: main.rs
2RGAMES-FRONT/: README.md  angular.json  package.json
2RGAMES-FRONT/src/: index.html  styles.css
2RGAMES-FRONT/src/app/: app.html  app.routes.ts  app.spec.ts  app.ts
2RGAMES-FRONT/src/app/modules/: user.ts
2RGAMES-FRONT/src/app/page/admin/: admin-module.ts
2RGAMES-FRONT/src/app/page/admin/index/: index.html  index.ts
2RGAMES-FRONT/src/app/page/users/: users.html  users.ts
2RGAMES-FRONT/src/app/parts/header/: header.html
2RGAMES-FRONT/src/app/parts/sidebar/: sidebar.html  sidebar.ts
2RGAMES-FRONT/src/app/parts/sidebar/side-button/: side-button.html  side-button.spec.ts  side-button.ts
2RGAMES-FRONT/src/app/pipes/: boolean-pipe.spec.ts  boolean-pipe.ts
2RGAMES-FRONT/src/app/services/users/: user-service.ts
