[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
aws-config = "1.8.10"
aws-sdk-dynamodb = "1.98.0"
tracing-subscriber = "0.3.20"
uuid = {version =  "1.18.1", features = ["v7"] }