[package]
name = "models"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
aws-sdk-dynamodb = "1.98.0"
uuid = { version = "1.18.1", features = ["v7"] }
lazy_static = "1.5.0"
database = { path = "../database" }
lambda_http = "1.0.1"
#serde_dynamo = "4.3.0"
#sqlx = { version = "0.9.0-alpha.1", features = ["runtime-tokio", "postgres", "sqlx-postgres"] }
sqlx = {version = "0.9.0-alpha.1", features = ["runtime-tokio", "postgres", "uuid", "chrono"]}