[package]
name = "sam-user-get"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.48.0", features = ["default", "rt", "rt-multi-thread", "macros"] }
lambda_http = "1.0.1"
lambda_runtime = "1.0.1"
http-service = { path = "../http-service" }
models = {path = "../models"}
serde_json = "1.0.145"