[package]
name = "sam-user-post"
version = "0.1.0"
edition = "2024"

[dependencies]
models = { path = "../models" }
http-service = { path = "../http-service" }
tokio = { version = "1.48.0", features = ["default", "rt", "rt-multi-thread", "macros"] }
lambda_http = "1.0.1"
lambda_runtime = "1.0.1"
serde_json = "1.0.145"